@@ -1,10 +1,10 @@
 # Port specification for compiling on the host machines version of gcc
-SDCC = $(shell ( sh -c "gcc --version" 2>&1 ) > /dev/null  && echo gcc || echo cc)
-SDCCFLAGS = $(CPPFLAGS) -DPORT_HOST=1 -fsigned-char -fpack-struct -DREENTRANT= -I$(top_builddir) -I$(top_srcdir)
+SDCC = @CC@
+SDCCFLAGS = @C99_FLAG@ $(CPPFLAGS) -DPORT_HOST=1 -DREENTRANT= -I$(top_builddir) -I$(top_srcdir)
 # disable all warnings:
 SDCCFLAGS+= -w
 # enable all warnings:
-#SDCCFLAGS+= -Wall
+#SDCCFLAGS+= @WALL_FLAG@
 
 BINEXT = .bin
 OBJEXT = .o
